<resources>
    <string name="app_name">Eat! draft</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Eat!</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Welcome to the Home page!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="button_pantry_text">Pantry</string>
    <string name="button_cart_text">Cart</string>
    <string name="button_recipes_text">Recipes</string>
    <string name="button_scan_text">Scan</string>

    <string name="navBar_saved">Saved</string>
    <string name="navBar_planning">Planning</string>
    <string name="navBar_account">Account</string>
    <string name="navBar_home">Home</string>
    <string name="navBar_scan">Scan</string>

    <string name="scan_content_description">Scan icon</string>
    <string name="saved_content_description">Saved icon</string>
    <string name="scale_content_description">Scale icon</string>
    <string name="account_content_description">Account icon</string>
    <string name="home_content_description">Home icon</string>
</resources>