<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />




    <!--15 Mobile bottom nav aka Footer, Menu, Tabs, Navigation-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mobile_bott"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@color/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Frame 10 -->
        <Button
            android:id="@+id/frame_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_saved"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/save_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frame_9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Frame 9 -->
        <Button
            android:id="@+id/frame_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_planning"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/calendar_img"
            app:layout_constraintStart_toEndOf="@id/frame_10"
            app:layout_constraintEnd_toStartOf="@id/frame_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Frame 8 -->
        <Button
            android:id="@+id/frame_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_account"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/account_img"
            app:layout_constraintStart_toEndOf="@id/frame_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="382dp"
        app:layout_constraintBottom_toBottomOf="@+id/mobile_bott"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <Button
            android:id="@+id/main_cart_button"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="61dp"
            android:background="@color/teal"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/cart_large_img"
            android:text="@string/button_cart_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/main_recipes_button"
            app:layout_constraintEnd_toStartOf="@+id/main_pantry_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/main_pantry_button"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:layout_marginBottom="61dp"
            android:background="@color/red"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/pantry_img"
            android:text="@string/button_pantry_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/main_scan_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_cart_button"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

        <Button
            android:id="@+id/main_recipes_button"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:layout_marginEnd="44dp"
            android:background="@color/orange"
            android:drawableTop="@drawable/scale_img"
            android:paddingTop="10dp"
            android:text="@string/button_recipes_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_scan_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_cart_button">

        </Button>

        <Button
            android:id="@+id/main_scan_button"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:background="@color/electric_green"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/scan_large_img"
            android:text="@string/button_scan_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_recipes_button"
            app:layout_constraintTop_toBottomOf="@+id/main_pantry_button">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>