<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">
    <!--15 Mobile bottom nav aka Footer, Menu, Tabs, Navigation-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mobile_bott"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@color/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Frame 11 -->
        <Button
            android:id="@+id/frame_11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background=""
            android:text="@string/navBar_scan"
            android:drawableTop="@drawable/scanner_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frame_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Frame 10 -->
        <Button
            android:id="@+id/frame_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background=""
            android:text="@string/navBar_saved"
            android:drawableTop="@drawable/save_img"
            app:layout_constraintStart_toEndOf="@id/frame_11"
            app:layout_constraintEnd_toStartOf="@id/frame_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Frame 8 -->
        <Button
            android:id="@+id/frame_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background=""
            android:text="@string/navBar_account"
            android:drawableTop="@drawable/account_img"
            app:layout_constraintStart_toEndOf="@id/frame_10"
            app:layout_constraintEnd_toStartOf="@+id/frame_7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <!-- Frame 7 -->
        <Button
            android:id="@+id/frame_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background=""
            android:text="@string/navBar_home"
            android:drawableTop="@drawable/home_img"
            app:layout_constraintStart_toEndOf="@id/frame_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>