<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <!--15 Mobile bottom nav aka Footer, Menu, Tabs, Navigation-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mobile_bott"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@color/navigation_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Nav Scan Button -->
        <Button
            android:id="@+id/nav_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_scan"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/scan_small_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_account_button"/>

        <!-- Nav Account Button -->
        <Button
            android:id="@+id/nav_account_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_account"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/account_img"
            app:layout_constraintStart_toEndOf="@id/nav_scan_button"
            app:layout_constraintEnd_toStartOf="@+id/nav_planning_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Nav Planning Button -->
        <Button
            android:id="@+id/nav_planning_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_planning"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/calendar_img"
            app:layout_constraintStart_toEndOf="@id/nav_account_button"
            app:layout_constraintEnd_toStartOf="@id/nav_home_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Nav Home Button -->
        <Button
            android:id="@+id/nav_home_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:text="@string/navBar_home"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:drawableTop="@drawable/home_img"
            app:layout_constraintStart_toEndOf="@id/nav_planning_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is the saved recipes fragment"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/mobile_bott"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />>

</androidx.constraintlayout.widget.ConstraintLayout>